--- a/package.json
+++ b/package.json
@@ -4,12 +4,6 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
-    "bower": "^1.3.12",
-    "gulp": "~3.8.10",
-    "gulp-less": "~1.3.6",
-    "gulp-livereload": "~2.1.1",
-    "gulp-watch": "~3.0.0",
-    "stream-combiner2": "^1.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,9 +13,20 @@
     "url": "git@bitbucket.org:correctiv/correctiv-eurosfueraerzte.org.git"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.6.0",
+    "babel-cli": "^6.24.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
+    "gulp": "~3.8.10",
+    "gulp-less": "~1.3.6",
+    "gulp-livereload": "~2.1.1",
+    "gulp-watch": "~3.0.0",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-babel": "^6.1.2",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "stream-combiner2": "^1.0.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
