--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 Django<1.11
-dj-database-url==0.4.1
-django-cache-url==1.0.0
-djangorestframework==3.3.3
-django-cors-headers==1.1.0
-django-leaflet==0.18.1
-pytz==2016.4
-django-sekizai==0.9.0
-psycopg2==2.6.1
-django-leaflet==0.18.1
+dj-database-url
+django-cache-url
+djangorestframework
+django-cors-headers
+pytz
+django-sekizai
+psycopg2
+django-leaflet
 gunicorn
 pandas
 reportlab
