--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,34 @@
-Django<1.11
-dj-database-url
-django-cache-url
-djangorestframework
-django-cors-headers
-pytz
-django-sekizai
-psycopg2
-django-leaflet
-gunicorn
-pandas
-reportlab
-whitenoise
-slugify
-django-debug-toolbar
-django-crispy-forms
-geocoder
-tqdm
-unicodecsv
+certifi==2017.4.17
+chardet==3.0.4
+click==6.7
+decorator==4.0.11
+dj-database-url==0.4.2
+Django==1.10.7
+django-cache-url==2.0.0
+django-classy-tags==0.8.0
+django-cors-headers==2.1.0
+django-crispy-forms==1.6.1
+django-debug-toolbar==1.8
+django-leaflet==0.22.0
+django-sekizai==0.10.0
+djangorestframework==3.6.3
+geocoder==1.23.2
+gunicorn==19.7.1
+idna==2.5
+numpy==1.13.1
+olefile==0.44
+pandas==0.20.3
+Pillow==4.2.1
+psycopg2==2.7.1
+python-dateutil==2.6.1
+pytz==2017.2
+ratelim==0.1.6
+reportlab==3.4.0
+requests==2.18.1
+six==1.10.0
+slugify==0.0.1
+sqlparse==0.2.3
+tqdm==4.14.0
+unicodecsv==0.14.1
+urllib3==1.21.1
+whitenoise==3.3.0
